--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,11 @@ body {
 .img-medium {
     height: 200px;
 }
-
+.container {
+             margin: 0 auto;
+             color: #000000;
+             font-family: sans sherif;
+             padding-top: 40px;
+             padding-left: 20px;
+             padding-right: 20px;
+            }
